# s3p-plugin-parser-tass

./: .gitignore  LICENSE  plugin.xml  pyproject.toml  readme.md
.github/workflows/: build-release.yml  plugin_test.yml  sync-release.yml
src/s3p_plugin_parser_tass/: config.py  tass.py
tests/: test_plugin_readme.py
tests/fixtures/: payload_class.py
tests/payload/: test_plugin_run.py
