[tool.poetry]
name = "s3p-plugin-parser-tass"
version = "0.3.0"
description = "A repository that provides a TASS S3Platform Plugin."
authors = [
    "avlkv, Artyom Volkov <lupashko@gmail.com>"
]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
s3p-sdk = "0.2.13"
selenium = "^4.31.0"
requests = "^2.32.3"
feedparser = "^6.0.11"
python-dateutil = "^2.9.0.post0"
beautifulsoup4 = "^4.13.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-timeout = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
